--- a/refs.bib
+++ b/refs.bib
@@ -192,3 +192,84 @@
   year={2008},
   publisher={Springer}
 }
+
+@article{capela2014multihoming,
+  title={Multihoming and network coding: A new approach to optimize the network performance},
+  author={Capela, Nelson and Sargento, Susana},
+  journal={Computer Networks},
+  volume={75},
+  pages={18--36},
+  year={2014},
+  publisher={Elsevier}
+}
+
+@inproceedings{sheyibani2012reliable,
+  title={A reliable and qos aware multi-path routing algorithm in wsns},
+  author={Sheyibani, Reza and Sharififar, Elham and Khosronejad, Mahsa and Mazaheri, Mohammad Reza and Homayounfar, Behzad},
+  booktitle={2012 Third International Conference on Emerging Intelligent Data and Web Technologies},
+  pages={125--132},
+  year={2012},
+  organization={IEEE}
+}
+
+@inproceedings{nguyen2003path,
+  title={Path diversity with forward error correction (pdf) system for packet switched networks},
+  author={Nguyen, Thinh and Zakhor, Avideh},
+  booktitle={IEEE INFOCOM 2003. Twenty-second Annual Joint Conference of the IEEE Computer and Communications Societies (IEEE Cat. No. 03CH37428)},
+  volume={1},
+  pages={663--672},
+  year={2003},
+  organization={IEEE}
+}
+
+@inproceedings{tao2004exploring,
+  title={Exploring the performance benefits of end-to-end path switching},
+  author={Tao, Shu and Xu, Kuai and Xu, Ying and Fei, Teng and Gao, Lixin and Guerin, Roch and Kurose, Jim and Towsley, Don and Zhang, Zhi-Li},
+  booktitle={Proceedings of the joint international conference on Measurement and modeling of computer systems},
+  pages={418--419},
+  year={2004}
+}
+
+@inproceedings{bremler2002predicting,
+  title={Predicting and bypassing end-to-end Internet service degradations},
+  author={Bremler-Barr, Anat and Cohen, Edith and Kaplan, Haim and Mansour, Yishay},
+  booktitle={Proceedings of the 2nd ACM SIGCOMM Workshop on Internet measurment},
+  pages={307--320},
+  year={2002}
+}
+
+@article{zand2012wireless,
+  title={Wireless industrial monitoring and control networks: The journey so far and the road ahead},
+  author={Zand, Pouria and Chatterjea, Supriyo and Das, Kallol and Havinga, Paul},
+  journal={Journal of sensor and actuator networks},
+  volume={1},
+  number={2},
+  pages={123--152},
+  year={2012},
+  publisher={MDPI}
+}
+
+@article{li2016multipath,
+  title={Multipath transmission for the internet: A survey},
+  author={Li, Ming and Lukyanenko, Andrey and Ou, Zhonghong and Yl{\"a}-J{\"a}{\"a}ski, Antti and Tarkoma, Sasu and Coudron, Matthieu and Secci, Stefano},
+  journal={IEEE Communications Surveys \& Tutorials},
+  volume={18},
+  number={4},
+  pages={2887--2925},
+  year={2016},
+  publisher={IEEE}
+}
+
+@techreport{finn2019deterministic,
+  title={Deterministic networking problem statement},
+  author={Finn, Norman and Thubert, Pascal},
+  year={2019}
+}
+
+@article{finn2019deterministicarch,
+  title={Deterministic networking architecture},
+  author={Finn, Norman and Thubert, Pascal and Varga, Balazs and Farkas, J{\'a}nos},
+  journal={RFC 8655},
+  year={2019},
+  publisher={IETF}
+}
