--- a/mainmatter/01_introduction.tex
+++ b/mainmatter/01_introduction.tex
@@ -11,7 +11,7 @@
 
 One of the aims for the fifth generation of mobile networks (5G) and it's successors will be a greater diversification of the classes of service. As the use cases for these networks evolve, there is a greater need for quality of service (QoS) tailored to each use case. For example, in the Industrial Internet of Things (IIoT) the requirements on latency, jitter, and reliability may be extremely stringent. Supporting these kinds of classes of service can be a challenge for mobile network operators (MNOs) and will require novel approaches to familiar problems, such as backhaul.
 
-As there are more heterogeneous edge deployments and more campus networks, backhaul becomes more challenging, since many sites may not have access to optical fibre, and may be forced into using other solutions such as satellite links, mmWave backhaul, or even regular ISP connetions. Providing the kind of deterministic quality of service that these sites may require can be a very difficult challenge.
+As there are more heterogeneous edge deployments and more campus networks, backhaul becomes more challenging, since many sites may not have access to optical fibre, and may be forced into using other solutions such as satellite links, mmWave backhaul, or even regular ISP connections. Providing the kind of deterministic quality of service that these sites may require can be a very difficult challenge.
 
 Network operators may choose to utilize more than one backhaul connection at the same time, in order to increase the available bandwidth or to utilize the different qualities of the backhaul links. This bears the question whether multipathing could then be used to provide deterministic backhaul by intelligently selecting on which links to forward packets. This approach bears similarity to multihoming as well as to multi-path routing in Wireless Sensor Networks (WSNs), and can take inspiration from the existing body of research in these fields, which has demonstrated that QoS can be improved by using multiple links or paths simultaneously \cite{akella2003measurement, tao2005improving, habib2007improving, goldenberg2004optimizing, huang2008multiconstrained, akella2008performance}.
 
@@ -33,18 +33,18 @@ Network operators may choose to utilize more than one backhaul connection at the
 \begin{figure}[h]
     \centering
         \includegraphics[width=0.9\textwidth, height=0.75\textwidth]{fig/mesh_network.png}
-        \caption{Network of Backhaul Entities}
+        \caption{Network of WAN Connectors}
         \label{fig:mesh}
 \end{figure}
 
-The goal of this thesis is to design a backhaul entity, that can be placed at the ingress and egress point of two or more locations, and utilizes multipathing in order to provide deterministic backhaul. The performance of this approach will then be quantitatively analyzed in experiments. Looking at figures \ref{fig:telco} and \ref{fig:mesh} we can see how this is envisioned to work. Backhaul entities are deployed in 2 or more sites which have more than one egress link. Then, using the multiple outgoing links, the traffic is backhauled to the other sites, while respecting the it's QoS requirements. These entities can also be deployed in multiple sites, interconnected in a mesh network, as seen in figure \ref{fig:mesh}. This can be especially beneficial for critical applications (e.g. between industrial sites), which are in locations that don't have access to optical fibre for backhaul.
+The goal of this thesis is to design a WAN connector, that can be placed at the ingress and egress point of two or more locations, and utilizes multipathing in order to provide deterministic backhaul between the two sites. The performance of this approach will then be quantitatively analyzed in experiments. Looking at Figures \ref{fig:telco} and \ref{fig:mesh} we can see how this is envisioned to work. WAN connectors are deployed in 2 or more sites which have more than one egress link. Then, using the multiple outgoing links, the traffic is backhauled to the other sites, while respecting it's QoS requirements. This can be especially beneficial for critical applications (e.g. between industrial sites), which are in locations that do not have access to optical fibre for backhaul. These connectors can also be deployed in more than two sites and interconnected in a mesh network, as seen in Figure \ref{fig:mesh}.
 
-For a 5G deployment the proposed backhaul entity could be deployed between multiple User Plane Functions (UPF) and Data Networks (DNs), which also host a backhaul entity, to provide deterministic backhaul. The architecture for such a deployment is shown in figure \ref{fig:telco}.
+For a 5G deployment the proposed WAN connector could be deployed between multiple User Plane Functions (UPF) and Data Networks (DNs) which also host WAN connectors, in order to provide deterministic backhaul. The architecture for such a deployment is shown in Figure \ref{fig:telco}.
 
 %=======================
 \section{Envisioned Approach}
 
-The design of a backhaul entity which meets the previously listed requirements necessitates the ability to first assess the quality of the existing connections via measurements, and then choose how to forward packets along these links so as to meet the QoS requirements. These represent two distinct challenges, however the existence of useful and accurate metrics about the outgoing links is a pre-cursor for any link-selection algorithm, and thus the question of link-selection directly depends on the colleciton of accurate metrics about the outgoing links.
+The design of a backhaul entity which meets the previously listed requirements necessitates the ability to first assess the quality of the existing connections via measurements, and then choose how to forward packets along these links so as to meet the QoS requirements. These represent two distinct challenges, however the existence of useful and accurate metrics about the outgoing links is a pre-cursor for any link-selection algorithm, and thus the question of link-selection directly depends on the collection of accurate metrics about the outgoing links.
 
 
 \subsection{Collecting Per-Link Metrics}
@@ -53,9 +53,9 @@ The design of a backhaul entity which meets the previously listed requirements n
 
 In \cite{akella2008performance} the authors collected both passive metrics (looking at response times for outgoing packets), and active measurements (sending ICMP ping, or TCP SYN messages and measuring the response time). Using the passive measurements enabled their multihomed approach to perform well, but when using the active measurements the performance was better. Crucially, the passive measurements worked better over larger sampling periods, because it took longer to get a full overview of all the possible routes. Whereas the active sampling approach acquired it's measurements faster and was thus more effective over smaller sampling intervals.
 
-Considering these results, it is proposed to utilize both active and passive measurements. All three metrics- packet loss, latency, and jitter- will be periodically measured in an active manner. The period over which to perform these measurements is an important design decision for the backhaul entity and it will be met later.
+Considering these results, it is proposed to utilize both active and passive measurements. All three metrics- packet loss, latency, and jitter- will be periodically measured in an active manner. The period over which to perform these measurements is an important design decision for the WAN connector, and it will be met later.
 
-Beyond this, these metrics will also be monitored on a passive basis wherever possible. In order to measure either the time needed (for latency and jitter), or to ascertain that a packet has been lost, a response is required for each outgoing message. This may only be possible for TCP SYN and SYN ACK messages, and other protocols which are guaranteed to contain request-response handshakes, and thus complicates the process of passive measurement.
+Beyond this, these metrics will also be monitored on a passive basis wherever possible. In order to measure either the time needed (for latency and jitter), or to ascertain that a packet has been lost, a response is required for each outgoing message. This may only be possible for TCP's SYN and SYN ACK messages as well as other protocols which are guaranteed to contain request-response handshakes, and thus complicates the process of passive measurement.
 
 For classical wired links in multihomed scenarios, \cite{tao2004exploring} have observed that one link will generally dominate with regards to latency, but with brief periods where other links' performance is superior. These same authors also note that with regards to packet loss there is far less prevalence of a "dominant" link, and generally the links will perform comparably. Packet loss is also a particularly difficult metric to measure, since most links are highly reliable and when they do experience packet loss it is in bursts \cite{tao2004exploring}. Wireless connections are usually less reliable and may experience more consistent rates of packet loss at the data link layer, however it is opaque from the perspective of the higher layers, which may only perceive it through the jitter and/or latency.
 
@@ -63,15 +63,15 @@ For classical wired links in multihomed scenarios, \cite{tao2004exploring} have 
 
 \subsubsection{Pre-configured Metrics}
 
-To support a diversity of deployment scenarios, consideration should also be given to dedicated connections (and/or "leased lines") that may already exist at a given site. These may have hard guarantees on packet loss, latency and jitter, and this would make the measurement process for said links redundant. Therefore the backhaul entity will be designed to allow for a link to have the jitter, reliability and latency metrics pre-configured, as well as allowing their configuration to be externally updated while the entity is running.
+To support a diversity of deployment scenarios, consideration should also be given to dedicated connections (and/or "leased lines") that may already exist at a given site. These may have hard guarantees on packet loss, latency and jitter, and this would make the measurement process for said links redundant. Therefore the WAN connector will be designed to allow for a link to have the jitter, reliability and latency metrics pre-configured, as well as allowing their configuration to be externally updated while the WAN connector is running.
 
-This consideration is made because of the increasing relevance of deterministic and/or time synchronized networks (TSN) to industrial applications \cite{finn2019deterministic, zand2012wireless, tschoke2021time}, and because of the plausibility of using dedicated or leased lines to achieve similar performance \cite{tschoke2021time} in the absence of actual time synchronization. It is realistic to imagine that, in the future, 5G campus networks at remote sites may have a dedicated lines to other sites, or may be either directly connected to a TSN network or to a gateway to one. These links will usually have deterministic properties (hence the pre-configuring of metrics for the backhaul entity), and will often feature scheduled traffic \cite{finn2019deterministicarch}, which opens up interesting possibilities for backhaul.
+This consideration is made because of the increasing relevance of deterministic and/or time synchronized networks (TSN) to industrial applications \cite{finn2019deterministic, zand2012wireless, tschoke2021time}, and because of the plausibility of using dedicated or leased lines to achieve similar performance \cite{tschoke2021time} in the absence of actual time synchronization. It is realistic to imagine that, in the future, 5G campus networks at remote sites may have a dedicated lines to other sites, or may be either directly connected to a Time Synchronized Network (TSN) or to a gateway to one. These links will usually have deterministic properties (hence the pre-configuring of metrics for the WAN connector), and will often feature scheduled traffic \cite{finn2019deterministicarch}, which opens up interesting possibilities for backhaul.
 
 \subsection{How to Guarantee QoS}
 
 \subsubsection{Limiting Jitter}
 
-The design of this approach is also an interesting challenge. One idea to improve jitter when backhauling across multiple links is to duplicate packets and forward them on multiple links, and have the backhaul entity on the other end buffer incoming packets and release them at a constant rate. This way, in the event of a packet being lost on one link, the other link is still able to receive it and the delay caused by retransmission is avoided. The downside of this approach is that it guarantees that the latency will always be as slow as the slowest link.\
+The design of an approach which guarantees QoS is also an interesting challenge. One idea to improve jitter when backhauling across multiple links is to duplicate packets and forward them on multiple links, and have the WAN connector on the other end buffer incoming packets and release them at a constant rate. This way, in the event of a packet being lost on one link, the other link is still able to receive it and the delay caused by retransmission is avoided. The downside of this approach is that it guarantees that the latency will always be as slow as the slowest link.
 
 \subsubsection{Low Delays}
 
@@ -93,7 +93,7 @@ The solution proposed for solving this multi-constrained QoS problem is to use i
 The ILP constrained problem will be to select those links on which to forward packets while minimizing the overall number of links used, and making sure to satisfy the latency, jitter and reliability requirements of the given flow.
 
 \begin{gather}
-\text{Minimize } \sum_{i=1}^{P}x_i \\
+\text{Minimize } \sum_{i=1}^{P}x_i \\this
 \text{Where, } d(i) * x_i\le D \\
 j(i) * x_i \le J \\
 \text{and }1 - \prod_{i=1}^{P}{ ( 1- r(i) * x_i ) } \ge R  \\
@@ -105,36 +105,36 @@ Here the variables $D$, $J$, and $R$ are the flow's delay, jitter, and reliabili
 \begin{figure}[h]
     \centering
         \includegraphics[width=\textwidth]{fig/be-architecture.png}
-        \caption{Internal Architecture of the Backhaul Entity}
+        \caption{Internal Architecture of the WAN Connector}
         \label{fig:arch}
 \end{figure}
 
-The proposed architecture of the backhaul entity is shown in figure \ref{fig:arch}. The backhaul entity is split into a control plane, which intelligently chooses which interfaces to forward on, and a data plane, which performs the forwarding, as well as any necessary buffering or en/decoding for forward error correction. The backhaul entity also performs different tasks depending on whether it is the origin or termination of a flow. For example, the terminating node may be receiving duplicate packets on the other paths, and it must know to drop these. Or, for example, it may need to wait and accumulate packets before releasing them at a steady rate, in order to reduce jitter (at the cost of higher latency).
+The proposed architecture of the WAN connector is shown in Figure \ref{fig:arch}. The connector is split into a control plane, which intelligently chooses which interfaces to forward on, and a data plane, which performs the forwarding, as well as any necessary buffering or en/decoding for forward error correction. The WAN connector also performs different tasks depending on whether it is the origin or termination of a flow. For example, the terminating node may be receiving duplicate packets on the other paths, and it must know to drop these. Or, for example, it may need to wait and accumulate packets before releasing them at a steady rate, in order to reduce jitter (at the cost of higher latency).
 
 Built into this architecture is a module which collects and stores data about the different links, e.g. their latency, reliability, and jitter. When polled, this module reports the performance, and may also try to predict future performance. The link selector uses this information to make its decisions.
 
 \subsection{Potential Issues and Design Questions which are Still Open}
 
-At present the idea would be to use the GTP protocol to tunnel data between any two backhaul entities, and then use the tunnel endpoint IDs (TEIDs) to differentiate between different traffic flows. In the control plane of the backhaul entity, one link would be chosen to be used for control and co-ordination messages between the two backhaul entities.
+At present the idea would be to use the GTP protocol to tunnel data between WAN connectors, and then use the tunnel endpoint IDs (TEIDs) to differentiate between different traffic flows. In the control plane of the WAN connector, one link would be chosen to be used for control and co-ordination messages between the two WAN connectors.
 
 This approach could run into trouble if there is fragmentation. Some applications attempt to base their packet sizes on the most common MTU values for ethernet links (1500 bytes  minus 20 bytes for the IPv4 header and 2 bytes for UDP), and this causes a problem when the packet is tunneled because the overhead of another IP header on top of the tunnel header pushes the packet beyond the MTU and thus it has to be fragmented, which can degrade performance. In the proposed design of the testbed, there is a traffic generator at use, so this generator can be configured not to generate packets exceeding 1450 bytes, but this issue is of practical concern for any realistic deployments.
 
 \subsection{Evaluating Performance}
 
-In order to evaluate the success of the proposed approach, three scenarios will be set up and investigated. Each setup will consist of two backhaul entities, and some number of emulated links going between them. The first scenario will feature 2 WAN links, a dedicated line, and a satellite connection. The second scenario will be almost identical to the first but it won't feature the dedicated line, since it is expected that a leased line may be too obvious a choice for any of the traffic with strict QoS requirements. Finally, in order to further investigate these situations where there is an obviously superior candidate, the third scenario will just feature two links: a dedicated line and a WAN link.
+In order to evaluate the success of the proposed approach, three scenarios will be set up and investigated. Each setup will consist of two WAN connectors, and some number of emulated links going between them. The first scenario will feature two links emulating regular WAN connections, one link emulating a dedicated line, and one which will emulate a satellite connection. The second scenario will be almost identical to the first but it won't feature the dedicated line, since it is expected that a leased line may be too obvious a choice for any of the traffic with strict QoS requirements. Finally, in order to further investigate these situations where there is an obviously superior candidate, the third scenario will just feature two links: a dedicated line and a WAN link.
 
 \begin{figure}[h]
     \centering
-        \includegraphics[width=\textwidth]{fig/testbed.png}
+        \includegraphics[width=0.66\textwidth]{fig/testbed.png}
         \caption{Testbed Setup}
         \label{fig:testbed}
 \end{figure}
 
-In all of these scenarios the same traffic flows will be replayed. This traffic will contain various types of flows, with various QoS requirements. Before a new flow is started, the flow's requirements are sent to the backhaul entity and it is either accepted or rejected. During the traffic replay, the delay, jitter, and reliability will be measured.
+In all of these scenarios the same traffic flows will be replayed. This traffic will contain various types of flows, with various QoS requirements. Before a new flow is started, the flow's requirements are sent to the WAN connector and it is either accepted or rejected. During the traffic replay, the delay, jitter, and reliability will be measured.
 
 These measurements will be performed once with the ILP approach proposed earlier and once with a simple round-robin approach for selecting links, and finally compared against an offline approach, where the optimal decision is computed with complete knowledge of the future. This offline approach will serve as the baseline for optimal performance, with which the other two approaches can be compared.
 
-All of these tests can be performed on the same testbed which will be set up as show in figure \ref{fig:testbed}. The testbed architecture features a traffic generator, two backhaul entities, with a link emulator between them, and a measurement module to analyse performance. In practice the traffic generator and the test bench will be co-located on the same machine.
+All of these tests can be performed on the same testbed which will be set up as shown in Figure \ref{fig:testbed}. The testbed architecture features a traffic generator, two WAN connectors, with a link emulator between them, and a measurement module to analyze performance. In practice the traffic generator and the test bench will be co-located on the same machine.
 
 %%=========================================
 \section{Structure of the Thesis}
@@ -144,8 +144,8 @@ The planned work for the thesis will be structured as follows:
 
 \begin{enumerate}
 \item{\textit{Design}: Research existing approaches and solutions, and design an approach for reliable backhaul over multiple paths/links}
-\item{\textit{Implementation}: Implement said approach in a basic testbed consisting of a traffic generator, various link emulators, measurement devices, and the backhaul entities}
-\item{\textit{Evaluation}: Analyse the performance of the backhaul entity according to its ability to reduce latency, improve jitter, and provide any other QoS requirements. Then compare it's performance with that of the individual links, as well as that of the other approaches.}
+\item{\textit{Implementation}: Implement said approach in a basic testbed consisting of a traffic generator, various link emulators, measurement devices, and the WAN connectors}
+\item{\textit{Evaluation}: Analyze the performance of the WAN connector according to its ability to reduce latency, improve jitter, and provide any other QoS requirements. Then compare it's performance with that of the individual links, as well as that of the other approaches.}
 
 \end{enumerate}
 
@@ -191,7 +191,7 @@ A thesis should take 6 months, or roughly 26 weeks. At present it is proposed to
 \caption{Gantt Chart: 15.06.23 - 15.12.23}
 \end{figure}
 
-The first phase of the experimental work will consist of setting up the testbed. This means installing the measurement modules as well as the link emulators. The next phase will require the implementation of the backhaul entity, as designed. The backhaul entity will require a module for collecting per-metric links, as well as the implementation of an algorithm to select the best link or links for a given flow. In the course of designing and preparing the backhaul entity there may be room for adjusting the initial plan based on what we experience during development. Next, the entity must be tested. During this phase traffic replays will be played over the testbed and evaluated. Thereafter the round robin approach and the "god routing" approach will also be evaluated. These two approaches will serve for comparison with the performance of the backhaul entity. Finally, this data must be analyzed, and the thesis can reach its conclusions, with 1 or 2 weeks buffer room for final revisions.
+The first phase of the experimental work will consist of setting up the testbed. This means installing the measurement modules as well as the link emulators. The next phase will require the implementation of the WAN connector, as designed. The WAN connector will require a module for collecting per-metric links, as well as the implementation of an algorithm to select the best link or links for a given flow. In the course of designing and preparing the WAN connector there may be room for adjusting the initial plan based on what we experience during development. Next, the connector must be tested. During this phase traffic replays will be played over the testbed and evaluated. Thereafter the round robin approach and the "god routing" approach will also be evaluated. These two approaches will serve for comparison with the performance of the WAN connector. Finally, this data must be analyzed, and the thesis can reach its conclusions, with 1 or 2 weeks buffer room for final revisions.
 
 
 %%% include all citations
